commit again, this time with all autoconf files

--- a/configure.ac
+++ b/configure.ac
@@ -2,4 +2,6 @@ AC_INIT([corrspec], [0.1], [young@physics.arizona.edu])
 AM_INIT_AUTOMAKE
 AC_PROG_CC
 AC_CONFIG_FILES([Makefile])
+AC_CHECK_LIB([fftw3], [fftw_plan_dft])
+AC_DEFINE(USE_FSWATCH)
 AC_OUTPUT
