--- a/Makefile.macos
+++ b/Makefile.macos
@@ -1,4 +1,9 @@
+CXX := gcc
+CXXFLAGS :=
+INCLUDES := -I/opt/local/include -I/opt/local/include -I./
+LIBS := -Wl,-rpath,/opt/local/lib -lit -L/opt/local/lib -lm -lfftw3 -lfswatch -DUSE_FSWATCH
+
 corrspec: corrspec.c
-	gcc -o corrspec corrspec.c -g -I./ -I/usr/include -I/opt/local/include -I/usr/include/arm-linux-gnueabihf -L./ -L/opt/local/lib -lm -lc -lfftw3 -lit -lfswatch -DUSE_FSWATCH
+	$(CXX) -o corrspec corrspec.c $(INCLUDES) $(CXXFLAGS) $(LIBS)
 
 all: corrspec
