--- a/QC-Stuff/tutorial3/Makefile
+++ b/QC-Stuff/tutorial3/Makefile
@@ -1,2 +1,3 @@
-prog: prog.c
-	gcc -o prog prog.c -I/usr/include/python3.10 -lpython3.10
+all: prog_ref.c prog_qc.c
+	gcc -o prog_ref prog_ref.c -I/usr/include/python3.10 -lpython3.10
+	gcc -o prog_qc prog_qc.c -I/usr/include/python3.10 -lpython3.10
